--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="title">
             <h1>Dr. Norman Borlaug</h1>
 
+            <p>The man who saved a billion lives</p>
         </div>
 
         <div id="img-div">
